argo/argo-workflows/manifests/argo-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-server
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    # networking.gke.io/managed-certificates: managed-cert
    # nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: "techarax.com"
      http:
        paths:
          - path: /argo(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: argo-server
                port:
                  number: 2746
